Rabotora.Core/Rsf/RabotoraScriptFormatParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from F:\C#\Misaka12456 (Misaka Castle)\Rabotora\Rabotora.Core\Rsf\RabotoraScriptFormat.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Rabotora.Core.Rsf {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
public partial class RabotoraScriptFormatParser : Parser {
	public const int
		Whitespace=1, LineComment=2, Comment=3, WS=4, LParen=5, RParen=6, LBrace=7, 
		RBrace=8, QttMrk=9, QttMrk2=10, Comma=11, Semicolon=12, QuesMark=13, Equals=14, 
		ClassKeyWord=15, ActionKeyWord=16, PrivateKeyWord=17, PublicKeyWord=18, 
		InternalKeyWord=19, StaticKeyWord=20, Int=21, Float=22, Word=23, PlainWord=24, 
		DOT=25;
	public const int
		RULE_funcWord = 0, RULE_plainString = 1, RULE_value = 2, RULE_values = 3, 
		RULE_cmd = 4, RULE_segment = 5, RULE_segmentBody = 6, RULE_typeDef = 7, 
		RULE_typeDefs = 8, RULE_classDef = 9, RULE_funcDef = 10, RULE_classSegment = 11, 
		RULE_funcSegment = 12, RULE_body = 13, RULE_script = 14;
	public static readonly string[] ruleNames = {
		"funcWord", "plainString", "value", "values", "cmd", "segment", "segmentBody", 
		"typeDef", "typeDefs", "classDef", "funcDef", "classSegment", "funcSegment", 
		"body", "script"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, "'('", "')'", "'{'", "'}'", "'''", "'\"'", 
		"','", "';'", "'?'", "'='", "'class'", "'void'", "'private'", "'public'", 
		"'internal'", "'static'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "Whitespace", "LineComment", "Comment", "WS", "LParen", "RParen", 
		"LBrace", "RBrace", "QttMrk", "QttMrk2", "Comma", "Semicolon", "QuesMark", 
		"Equals", "ClassKeyWord", "ActionKeyWord", "PrivateKeyWord", "PublicKeyWord", 
		"InternalKeyWord", "StaticKeyWord", "Int", "Float", "Word", "PlainWord", 
		"DOT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RabotoraScriptFormat.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public RabotoraScriptFormatParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class FuncWordContext : ParserRuleContext {
		public ITerminalNode[] Word() { return GetTokens(RabotoraScriptFormatParser.Word); }
		public ITerminalNode Word(int i) {
			return GetToken(RabotoraScriptFormatParser.Word, i);
		}
		public ITerminalNode[] DOT() { return GetTokens(RabotoraScriptFormatParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(RabotoraScriptFormatParser.DOT, i);
		}
		public FuncWordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcWord; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterFuncWord(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitFuncWord(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncWord(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncWordContext funcWord() {
		FuncWordContext _localctx = new FuncWordContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_funcWord);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 30; Match(Word);
			State = 35;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==DOT) {
				{
				{
				State = 31; Match(DOT);
				State = 32; Match(Word);
				}
				}
				State = 37;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PlainStringContext : ParserRuleContext {
		public ITerminalNode[] QttMrk() { return GetTokens(RabotoraScriptFormatParser.QttMrk); }
		public ITerminalNode QttMrk(int i) {
			return GetToken(RabotoraScriptFormatParser.QttMrk, i);
		}
		public ITerminalNode PlainWord() { return GetToken(RabotoraScriptFormatParser.PlainWord, 0); }
		public ITerminalNode[] QttMrk2() { return GetTokens(RabotoraScriptFormatParser.QttMrk2); }
		public ITerminalNode QttMrk2(int i) {
			return GetToken(RabotoraScriptFormatParser.QttMrk2, i);
		}
		public PlainStringContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_plainString; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterPlainString(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitPlainString(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlainString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PlainStringContext plainString() {
		PlainStringContext _localctx = new PlainStringContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_plainString);
		try {
			State = 44;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case QttMrk:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 38; Match(QttMrk);
				State = 39; Match(PlainWord);
				State = 40; Match(QttMrk);
				}
				}
				break;
			case QttMrk2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 41; Match(QttMrk2);
				State = 42; Match(PlainWord);
				State = 43; Match(QttMrk2);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public PlainStringContext plainString() {
			return GetRuleContext<PlainStringContext>(0);
		}
		public ITerminalNode Word() { return GetToken(RabotoraScriptFormatParser.Word, 0); }
		public ITerminalNode Int() { return GetToken(RabotoraScriptFormatParser.Int, 0); }
		public ITerminalNode Float() { return GetToken(RabotoraScriptFormatParser.Float, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_value);
		try {
			State = 50;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case QttMrk:
			case QttMrk2:
				EnterOuterAlt(_localctx, 1);
				{
				State = 46; plainString();
				}
				break;
			case Word:
				EnterOuterAlt(_localctx, 2);
				{
				State = 47; Match(Word);
				}
				break;
			case Int:
				EnterOuterAlt(_localctx, 3);
				{
				State = 48; Match(Int);
				}
				break;
			case Float:
				EnterOuterAlt(_localctx, 4);
				{
				State = 49; Match(Float);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValuesContext : ParserRuleContext {
		public ITerminalNode LParen() { return GetToken(RabotoraScriptFormatParser.LParen, 0); }
		public ITerminalNode RParen() { return GetToken(RabotoraScriptFormatParser.RParen, 0); }
		public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(RabotoraScriptFormatParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(RabotoraScriptFormatParser.Comma, i);
		}
		public ValuesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_values; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterValues(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitValues(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValues(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValuesContext values() {
		ValuesContext _localctx = new ValuesContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_values);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; Match(LParen);
			State = 61;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << QttMrk) | (1L << QttMrk2) | (1L << Int) | (1L << Float) | (1L << Word))) != 0)) {
				{
				State = 53; value();
				State = 58;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==Comma) {
					{
					{
					State = 54; Match(Comma);
					State = 55; value();
					}
					}
					State = 60;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 63; Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmdContext : ParserRuleContext {
		public FuncWordContext funcWord() {
			return GetRuleContext<FuncWordContext>(0);
		}
		public ValuesContext values() {
			return GetRuleContext<ValuesContext>(0);
		}
		public ITerminalNode Semicolon() { return GetToken(RabotoraScriptFormatParser.Semicolon, 0); }
		public ITerminalNode[] Word() { return GetTokens(RabotoraScriptFormatParser.Word); }
		public ITerminalNode Word(int i) {
			return GetToken(RabotoraScriptFormatParser.Word, i);
		}
		public ITerminalNode Equals() { return GetToken(RabotoraScriptFormatParser.Equals, 0); }
		public ValueContext value() {
			return GetRuleContext<ValueContext>(0);
		}
		public PlainStringContext plainString() {
			return GetRuleContext<PlainStringContext>(0);
		}
		public SegmentContext segment() {
			return GetRuleContext<SegmentContext>(0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmd; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterCmd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitCmd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CmdContext cmd() {
		CmdContext _localctx = new CmdContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_cmd);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				State = 65; funcWord();
				State = 66; values();
				State = 68;
				_errHandler.Sync(this);
				_la = _input.La(1);
				if (_la==LBrace) {
					{
					State = 67; segment();
					}
				}

				State = 70; Match(Semicolon);
				}
				break;

			case 2:
				{
				State = 72; Match(Word);
				State = 73; Match(Equals);
				State = 76;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case Word:
					{
					State = 74; Match(Word);
					}
					break;
				case QttMrk:
				case QttMrk2:
					{
					State = 75; plainString();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 78; Match(Semicolon);
				}
				break;

			case 3:
				{
				State = 79; funcWord();
				State = 80; value();
				State = 81; Match(Semicolon);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SegmentContext : ParserRuleContext {
		public ITerminalNode LBrace() { return GetToken(RabotoraScriptFormatParser.LBrace, 0); }
		public SegmentBodyContext segmentBody() {
			return GetRuleContext<SegmentBodyContext>(0);
		}
		public ITerminalNode RBrace() { return GetToken(RabotoraScriptFormatParser.RBrace, 0); }
		public SegmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_segment; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterSegment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitSegment(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSegment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SegmentContext segment() {
		SegmentContext _localctx = new SegmentContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_segment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 85; Match(LBrace);
			State = 86; segmentBody();
			State = 87; Match(RBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SegmentBodyContext : ParserRuleContext {
		public CmdContext[] cmd() {
			return GetRuleContexts<CmdContext>();
		}
		public CmdContext cmd(int i) {
			return GetRuleContext<CmdContext>(i);
		}
		public SegmentBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_segmentBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterSegmentBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitSegmentBody(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSegmentBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SegmentBodyContext segmentBody() {
		SegmentBodyContext _localctx = new SegmentBodyContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_segmentBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==Word) {
				{
				{
				State = 89; cmd();
				}
				}
				State = 94;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDefContext : ParserRuleContext {
		public ITerminalNode[] Word() { return GetTokens(RabotoraScriptFormatParser.Word); }
		public ITerminalNode Word(int i) {
			return GetToken(RabotoraScriptFormatParser.Word, i);
		}
		public ITerminalNode QuesMark() { return GetToken(RabotoraScriptFormatParser.QuesMark, 0); }
		public TypeDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterTypeDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitTypeDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDefContext typeDef() {
		TypeDefContext _localctx = new TypeDefContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_typeDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95; Match(Word);
			State = 97;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==QuesMark) {
				{
				State = 96; Match(QuesMark);
				}
			}

			State = 99; Match(Word);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDefsContext : ParserRuleContext {
		public ITerminalNode LParen() { return GetToken(RabotoraScriptFormatParser.LParen, 0); }
		public ITerminalNode RParen() { return GetToken(RabotoraScriptFormatParser.RParen, 0); }
		public TypeDefContext[] typeDef() {
			return GetRuleContexts<TypeDefContext>();
		}
		public TypeDefContext typeDef(int i) {
			return GetRuleContext<TypeDefContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(RabotoraScriptFormatParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(RabotoraScriptFormatParser.Comma, i);
		}
		public TypeDefsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDefs; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterTypeDefs(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitTypeDefs(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDefs(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDefsContext typeDefs() {
		TypeDefsContext _localctx = new TypeDefsContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_typeDefs);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101; Match(LParen);
			State = 110;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==Word) {
				{
				State = 102; typeDef();
				State = 107;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==Comma) {
					{
					{
					State = 103; Match(Comma);
					State = 104; typeDef();
					}
					}
					State = 109;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
			}

			State = 112; Match(RParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefContext : ParserRuleContext {
		public ITerminalNode ClassKeyWord() { return GetToken(RabotoraScriptFormatParser.ClassKeyWord, 0); }
		public ITerminalNode Word() { return GetToken(RabotoraScriptFormatParser.Word, 0); }
		public ITerminalNode StaticKeyWord() { return GetToken(RabotoraScriptFormatParser.StaticKeyWord, 0); }
		public ITerminalNode PublicKeyWord() { return GetToken(RabotoraScriptFormatParser.PublicKeyWord, 0); }
		public ITerminalNode PrivateKeyWord() { return GetToken(RabotoraScriptFormatParser.PrivateKeyWord, 0); }
		public ITerminalNode InternalKeyWord() { return GetToken(RabotoraScriptFormatParser.InternalKeyWord, 0); }
		public ClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterClassDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitClassDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefContext classDef() {
		ClassDefContext _localctx = new ClassDefContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_classDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PrivateKeyWord) | (1L << PublicKeyWord) | (1L << InternalKeyWord))) != 0)) {
				{
				State = 114;
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PrivateKeyWord) | (1L << PublicKeyWord) | (1L << InternalKeyWord))) != 0)) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}

					_errHandler.ReportMatch(this);
					Consume();
				}
				}
			}

			State = 118;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==StaticKeyWord) {
				{
				State = 117; Match(StaticKeyWord);
				}
			}

			State = 120; Match(ClassKeyWord);
			State = 121; Match(Word);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncDefContext : ParserRuleContext {
		public ITerminalNode[] Word() { return GetTokens(RabotoraScriptFormatParser.Word); }
		public ITerminalNode Word(int i) {
			return GetToken(RabotoraScriptFormatParser.Word, i);
		}
		public TypeDefsContext typeDefs() {
			return GetRuleContext<TypeDefsContext>(0);
		}
		public ITerminalNode ActionKeyWord() { return GetToken(RabotoraScriptFormatParser.ActionKeyWord, 0); }
		public ITerminalNode StaticKeyWord() { return GetToken(RabotoraScriptFormatParser.StaticKeyWord, 0); }
		public ITerminalNode PublicKeyWord() { return GetToken(RabotoraScriptFormatParser.PublicKeyWord, 0); }
		public ITerminalNode PrivateKeyWord() { return GetToken(RabotoraScriptFormatParser.PrivateKeyWord, 0); }
		public ITerminalNode InternalKeyWord() { return GetToken(RabotoraScriptFormatParser.InternalKeyWord, 0); }
		public FuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.EnterFuncDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IRabotoraScriptFormatListener typedListener = listener as IRabotoraScriptFormatListener;
			if (typedListener != null) typedListener.ExitFuncDef(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRabotoraScriptFormatVisitor<TResult> typedVisitor = visitor as IRabotoraScriptFormatVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FuncDefContext funcDef() {
		FuncDefContext _localctx = new FuncDefContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_funcDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 124;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PrivateKeyWord) | (1L << PublicKeyWord) | (1L << InternalKeyWord))) != 0)) {
				{
				State = 123;
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PrivateKeyWord) | (1L << PublicKeyWord) | (1L << InternalKeyWord))) != 0)) ) {
				_errHandler.RecoverInline(this);
				} else {
					if (_input.La(1) == TokenConstants.Eof) {
						matchedEOF = true;
					}
